# deeper-api-django

./: .gitignore  README.md  pyproject.toml
deeper/card/: admin.py  models.py
deeper/config/: asgi.py  schema.py  settings.py  urls.py  wsgi.py
deeper/config/static/admin/css/: admin.css  admin.scss
deeper/config/static/core/css/: style.css  style.css.map  style.scss
deeper/core/: urls.py  views.py
deeper/templates/admin/: base_site.html
deeper/templates/core/: categories.html  index.html  question.html
deeper/templates/core/_partials/: head.html
