[tool.poetry]
name = "deeper-django"
version = "0.1.0"
description = "deeper card game backend"
authors = ["Alicia Schonefeld <schonefeld.dev@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.1.6"
graphene-django = "^2.15.0"
gunicorn = "^20.0.4"
psycopg2-binary = "^2.8.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
